# HydPy-meetups

./: HydPy-da-part1.ipynb  LICENSE  README.md
.github/ISSUE_TEMPLATE/: propose-talk-workshop.md
.ipynb_checkpoints/: HydPy-da-part1-checkpoint.ipynb
17-Mar-2018/Practical Python Design Patterns/: PythonDesignPatterns.ipynb
2016-10-22/Example/: higher_function_example.py  magic_method.py
2016/2016-10-22/: Advanced Python Hands-on.pptx
2016/Python 101 Workshop- NMIMS/: stock_data.csv  store_sales.txt
2017-08-12/: Data pre-processing in python with scikit.odp
2018-03-17/Introduction to data analysis in Python/: indian_liver_patient.csv
2019-05-18/: Link Prediction on Hike's Network.pptx
2020/2020-02-29/: Linux Essentials.pptx  MetaProgramming In Python.ipynb  MetaProgramming in Python.pptx  Python.and.Netflix_Meetup.pptx
2023/: 25-02-2023  readme.txt
2023/13- May-2023/: Datafication of Indian judicial texts using Natural Language Processing (NLP).pptx  Meetup_details.txt
2024/: May Meetup  readme.md  readme.txt
2024/17-Feb-2024/: Getting started with asyncio.pptx  readme.txt
2024/April Meetup/: readme.md
2024/March Meetup /: readme.md
2025/meetup-jul/12th/session-1/code/: .gitignore  README.md  pyproject.toml
2025/meetup-jul/12th/session-1/code/nanoagents/: __init__.py  nanoagent.py
2025/meetup-jul/12th/session-1/code/tests/: test.py
Python 101 Workshop- NMIMS/: stock_data.csv
Python101_April_2017/: Python 101.ipynb  group_1.fasta
python101-nmims/: NMIMS_Workshop.ipynb  cs228-python-tutorial.ipynb  store_sales.txt
(+60 files in other folders)
